--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A Portfolio In The Cloud</title>
+    <title>Devops In The Cloud</title>
     <link rel="stylesheet" href="styles/main.css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        Bryan Cochrane
+        BRYAN COCHRANE
       </h1>
 
       <ul class="section--social">
@@ -28,7 +28,7 @@
           <a class="color--skyBlue social"
              title="LinkedIn Profile"
              target="_blank"
-             href="#">
+             href="https://www.linkedin.com/in/bryancochrane/">
             <i class="fa fa-linkedin"></i>
           </a>
         </li>
@@ -38,7 +38,7 @@
           <a class="social color--skyBlue"
              title="GitHub Profile"
              target="_blank"
-             href="#">
+             href="https://github.com/somabc">
             <i class="fa fa-github"></i>
           </a>
         </li>
@@ -47,7 +47,7 @@
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
-             href="#">
+             href="https://www.dropbox.com/s/dzux6dky435y5vb/Bryan_Cochrane_2017.pdf?dl=0">
             <i class="fa fa-file-text"></i>
           </a>
         </li>
@@ -116,8 +116,7 @@
 
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
-        I am learning to code in the cloud! I like to work hard and learn new things.
-        I want to work for a company that will pay me to code in the cloud!
+        All things DevOps
       </p>
 
     <div class="background--skyBlue modal--closed">
