--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
-             href="https://www.dropbox.com/s/dzux6dky435y5vb/Bryan_Cochrane_2017.pdf?dl=0">
+             href="Bryan_Cochrane_2017.pdf">
             <i class="fa fa-file-text"></i>
           </a>
         </li>
