--- a/babel.html
+++ b/babel.html
@@ -23,6 +23,8 @@
 
       <div id="content"></div>
       <div id="error" class="errorBox--hidden">
+        Error message goes here.
+      </div>
     </main>
 
     <script src="https://unpkg.com/babel-standalone">
