--- a/babel.html
+++ b/babel.html
@@ -5,8 +5,8 @@
     <title>Babel Demo</title>
     <style media="screen">
       .errorBox {
-        border: 1px solid red
-        background-color: #eebbb
+        border: 1px solid red;
+        background-color: #eebbbb;
         margin: 1em;
         padding: 2em;
     }
